<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingHorizontal="@dimen/appPadding">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_black"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_username"
        style="@style/CustomTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        android:layout_marginVertical="40dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            style="@style/CustomTextInputEditText"
            android:hint="@string/username"
            android:maxLines="1"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_email"
        style="@style/CustomTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_username"
        android:layout_marginVertical="@dimen/editTextMargin"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:hint="@string/email"
            style="@style/CustomTextInputEditText"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_phone"
        style="@style/CustomTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email"
        android:layout_marginVertical="@dimen/editTextMargin"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_phone"
            android:hint="@string/phone"
            style="@style/CustomTextInputEditText"
            android:maxLines="1"
            android:inputType="phone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_password"
        style="@style/CustomTextInputLayout"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_phone"
        android:layout_marginVertical="@dimen/editTextMargin"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:hint="@string/password"
            style="@style/CustomTextInputEditText"
            android:maxLines="1"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/txt_to_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toc"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/checkbox"
        app:layout_constraintTop_toTopOf="@id/checkbox"
        app:layout_constraintBottom_toBottomOf="@id/checkbox"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        style="@style/CustomMaterialButton"
        android:layout_marginTop="130dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/txt_login_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register"/>

</androidx.constraintlayout.widget.ConstraintLayout>